--- a/Web/thapargpt-frontend/package.json
+++ b/Web/thapargpt-frontend/package.json
@@ -38,6 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/"
 
 }
