--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           cd Web/thapargpt-frontend
-          npm ci
+          npm install
 
       - name: Build React app
         run: |
-          cd web/thapargpt-frontend
+          cd Web/thapargpt-frontend
           npm run build
 
       - name: Deploy to GitHub Pages
