--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy React App
+name: Deploy React App to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # or master
+      - main
 
 permissions:
   contents: write
@@ -13,26 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
       - name: Install dependencies
         run: |
-          cd Web/thapargpt-frontend
+          cd Web/thapargpt-frontend   # Ensure this folder exists
           npm install
 
-      - name: Build React app
+      - name: Build app
         run: |
-          cd Web/thapargpt-frontend
+          cd Web/thapargpt-frontend   # Ensure this folder exists
           npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: web/thapargpt-frontend/build
+          publish_dir: Web/thapargpt-frontend/build   # Ensure this folder exists
