Made changes in package.json

--- a/Web/thapargpt-frontend/package.json
+++ b/Web/thapargpt-frontend/package.json
@@ -39,6 +39,6 @@
     ]
   },
   "proxy": "http://localhost:3000",
-  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/"
+  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/web/thapargpt-frontend/"
 
 }
