--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,7 @@ name: Deploy React App to GitHub Pages
 on:
   push:
     branches:
-      - main
-
-permissions:
-  contents: write
+      - main  # or your default branch
 
 jobs:
   deploy:
@@ -14,25 +11,23 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install dependencies
-        run: |
-          cd Web/thapargpt-frontend   # Ensure this folder exists
-          npm install
+        run: npm install
+        working-directory: ./Web/thapargpt-frontend
 
-      - name: Build app
-        run: |
-          cd Web/thapargpt-frontend   # Ensure this folder exists
-          npm run build
+      - name: Build
+        run: npm run build
+        working-directory: ./Web/thapargpt-frontend
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: Web/thapargpt-frontend/build   # Ensure this folder exists
+          publish_dir: ./Web/thapargpt-frontend/build
