--- a/Web/thapargpt-frontend/package.json
+++ b/Web/thapargpt-frontend/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "proxy": "http://localhost:3000",
-  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/web/thapargpt-frontend/"
-
+  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/web/thapargpt-frontend/",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
