--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd Web/thapargpt-frontend   # Ensure this folder exists
+          cd ./Web/thapargpt-frontend   # Ensure this folder exists
           npm install
 
       - name: Build app
         run: |
-          cd Web/thapargpt-frontend   # Ensure this folder exists
+          cd ./Web/thapargpt-frontend   # Ensure this folder exists
           npm run build
 
       - name: Deploy to GitHub Pages
