--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,13 @@ jobs:
         run: |
           cd ./Web/thapargpt-frontend   # Ensure this folder exists
           npm run build
+          
+      - name: Verify build folder
+        run: ls -la WEB/thapargpt-frontend/build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: Web/thapargpt-frontend/build   # Ensure this folder exists
+          branch: gh-pages
