--- a/Web/thapargpt-frontend/package.json
+++ b/Web/thapargpt-frontend/package.json
@@ -19,6 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -41,7 +42,7 @@
     ]
   },
   "proxy": "http://localhost:3000",
-  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/Web/thapargpt-frontend",
+  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
