--- a/Web/thapargpt-frontend/package.json
+++ b/Web/thapargpt-frontend/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "proxy": "http://localhost:3000",
-  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv",
+  "homepage": "https://aryan-kamboj11.github.io/ThaparEnv/Web/thapargpt-frontend",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
