--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: Web/thapargpt-frontend/build
-          branch: gh-pages
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           publish_dir: Web/thapargpt-frontend/build
+           destination_dir: Web/thapargpt-frontend
